# perf-eng-playground

./: LICENSE  README.md  pyproject.toml
fib/: data.py  main.py  models.py  utils.py
tests/: test_data.py
